# full-stack-ai-agent-template

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
ai_agent_teams_1/: .env.prod.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.frontend.yml  docker-compose.prod.yml  docker-compose.yml
ai_agent_teams_1/backend/: .env.example  Dockerfile  pyproject.toml
ai_agent_teams_1/backend/alembic/: env.py
ai_agent_teams_1/backend/app/: main.py
ai_agent_teams_1/backend/cli/: commands.py
ai_agent_teams_1/backend/tests/: test_agents.py  test_conversation_kb_toggle.py  test_core.py  test_rbac_teams.py  test_repositories_teams.py  test_services.py  test_services_conversation.py  test_services_members.py  test_services_organizations.py  test_stripe_seats.py  test_tenant_isolation.py  test_worker.py
ai_agent_teams_1/docs/: adding_features.md  architecture.md  commands.md  configuration.md  file-processing.md  patterns.md  permissions.md
ai_agent_teams_1/docs/howto/: add-rag-source.md  add-sync-connector.md  configure-sync-sources.md  customize-agent-prompt.md
ai_agent_teams_1/frontend/: .env.example  Dockerfile  README.md  instrumentation.ts  next.config.ts  package.json
ai_agent_teams_1/frontend/e2e/: chat.spec.ts  home.spec.ts
ai_agent_teams_1/frontend/messages/: en.json  pl.json
ai_agent_test/: AGENTS.md  CLAUDE.md  CONTRIBUTING.md  ENV_VARS.md  MANUAL_STEPS.md  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.frontend.yml  docker-compose.prod.yml  docker-compose.yml
ai_agent_test/.github/workflows/: ci.yml
ai_agent_test/backend/: .env.example  Dockerfile  pyproject.toml
ai_agent_test/backend/alembic/: env.py
ai_agent_test/backend/alembic/versions/: 0000_create_users.py  0001_create_organization_tables.py  0002_backfill_personal_orgs.py  0003_add_is_app_admin.py  0004_5_create_core_tables.py  0004_create_audit_log.py  0005_add_org_id_to_conversations_and_rag.py  0006_backfill_org_id_on_conversations.py  0007_create_knowledge_bases.py  0008_backfill_default_kbs.py  0009_conv_active_kb_ids.py  0010_org_billing_seats.py  0011_create_plan_price_tables.py  0012_create_subscription_table.py  0013_create_stripe_event_table.py  0014_credits_usage_events.py  0015_create_mv_usage_daily.py
ai_agent_test/backend/app/: main.py
ai_agent_test/backend/app/agents/: assistant.py  prompts.py
ai_agent_test/backend/app/agents/tools/: __init__.py  chart_render.py  chart_tool.py  rag_tool.py  web_search.py
ai_agent_test/backend/app/api/: deps.py  exception_handlers.py
ai_agent_test/backend/app/api/routes/v1/: __init__.py  agent.py  auth.py  billing.py  channels.py  conversations.py  health.py  knowledge_bases.py  marketing.py  rag.py  slack_webhook.py  telegram_webhook.py
ai_agent_test/backend/app/commands/: channel.py  rag.py  sync_stripe_plans.py
ai_agent_test/backend/app/core/: config.py  logfire_setup.py
ai_agent_test/backend/app/db/models/: __init__.py  channel_bot.py  channel_identity.py  channel_session.py  conversation.py  knowledge_base.py  sync_log.py  sync_source.py  user.py
ai_agent_test/backend/app/repositories/: __init__.py  channel_bot.py  invitation.py  rag_document.py  sync_source.py  usage_event.py  user.py
ai_agent_test/backend/app/schemas/: __init__.py  channel_bot.py  conversation.py  knowledge_base.py  marketing.py  organization.py  sync_source.py
ai_agent_test/backend/app/services/: admin.py  agent.py  agent_invocation.py  agent_session.py  anomaly_detection.py  channel_bot.py  conversation.py  file_upload.py  knowledge_base.py  newsletter.py  rag_document.py  rag_status.py  rag_sync.py  sync_source.py  user.py
ai_agent_test/backend/app/services/billing/: facade.py  stripe_client.py  webhook_handler.py
ai_agent_test/backend/app/services/billing/handlers/: subscription_events.py
ai_agent_test/backend/app/services/channels/: __init__.py  base.py  router.py  slack.py  telegram.py
ai_agent_test/backend/app/services/email/: service.py
ai_agent_test/backend/app/services/rag/: config.py  documents.py  embeddings.py  image_describer.py  ingestion.py  models.py  reranker.py  retrieval.py  vectorstore.py
ai_agent_test/backend/app/services/rag/connectors/: __init__.py  google_drive.py  s3.py
ai_agent_test/backend/app/services/rag/sources/: __init__.py  base.py  google_drive.py  s3.py
ai_agent_test/backend/app/worker/: celery_app.py
ai_agent_test/backend/app/worker/background/: channel.py
ai_agent_test/backend/app/worker/tasks/: __init__.py  anomaly_tasks.py  cleanup_tasks.py  email_tasks.py  rag_tasks.py
ai_agent_test/backend/cli/: commands.py
ai_agent_test/backend/tests/: test_agents.py  test_chart_tool.py  test_conversation_kb_toggle.py  test_core.py  test_kb_scoping.py  test_web_search.py
ai_agent_test/backend/tests/api/: test_auth.py
ai_agent_test/docs/: adding_features.md  architecture.md  commands.md  configuration.md  deploy.md  file-processing.md  patterns.md  permissions.md
ai_agent_test/frontend/: .env.example  instrumentation.ts  next.config.ts  package.json
ai_agent_test/nginx/: nginx.conf
fastapi_gen/: cli.py  config.py  prompts.py
template/: VARIABLES.md
template/hooks/: post_gen_project.py
template/{{cookiecutter.project_slug}}/: docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
(+361 files in other folders)
